--- a/index.html
+++ b/index.html
@@ -5,14 +5,68 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Spotify Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    Premium Discover Help Download Music for everyone. Spotify is now free on mobile, tablet and computer. Listen to the
-    right music, wherever you are. What’s on Spotify? Millions of Songs There are millions of songs on Spotify HD Music
-    Listen to music as if you were listening live Stream Everywhere Stream music on your smartphone, tablet or computer
-    It’s as yeezy as Kanye West. Search Know what you want to listen to? Just search and hit play. Browse Check out the
-    latest charts, brand new releases and great playlists for right now. Discover Enjoy new music every Monday with your
-    own personal playlist. Or sit back and enjoy Radio.
+    <header>
+      <img class="logo" src="images/spotify-logo.png" alt="spotify logo"/>
+      <div class="navbar">
+        <a href="#">Premium</a>
+        <a href="#">Discover</a>
+        <a href="#">Help</a>
+        <a href="#">Download</a>
+      </div>
+    </header>
+    <section class="section1">
+      <h1>Music for everyone.</h1>
+      <p>Spotify is now free on mobile, tablet and computer.<br>
+      Listen to the right music, wherever you are.</p>
+    </section>
+    <section class="section2">
+      <div class="headtitle">
+      <h1>What's on Spotify?</h1>
+      <hr class="underline">
+      </div>
+      <div class="container">
+        <div class="item">
+          <img class="imageicon" src="images/music-icon.png" alt="music-icon" />
+          <p class="greenwords">Millions of Songs</p>
+          <p class="smallwords">There are millions of<br>songs on Spotify</p>
+        </div>
+        <div class="item">
+          <img class="imageicon" src="images/high-quality-icon.png" alt="high-quality" />
+          <p class="greenwords">HD Music</p>
+          <p class="smallwords">Listen to musics as if you<br>were listening live</p>
+        </div>
+        <div class="item">
+          <img class="imageicon" src="images/devices-icon.png" alt="device" />
+          <p class="greenwords">Stream Everywhere</p>
+          <p class="smallwords">Stream music on your<br>smartphone, tablet or<br>computer</p>
+        </div>
+      </div>
+    </section>
+    <section class="lastsec">
+      <div class="topSec">
+        <span class="Yezzy">It's as Yeezy as Kanye West.</span>
+        <hr class="underline2">
+      </div>
+      <div class="container2">
+        <div class="element1">
+         <span class="big">Search</span>
+         <span class="small">Know what you want to listen to?<br>Just search and hit play.</span>
+         <span class="big">Browse</span>
+         <span class="small">Check out the latest charts,<br>brand new releases and great<br>playlist for right now</span>
+         <span class="big">Discover</span>
+         <span class="small">Enjoy new music every Monday<br>with your own personal playlist.<br>Or sit back and enjoy Radio.</span> 
+        </div>
+        <div>
+          <img class="img1" src="images/spotify-icon-white.png" alt="whiteicon"/>
+        </div>
+        <div>
+          <img class="img2" src="images/spotify-app.jpg" alt="spotifyapp">
+        </div>
+      </div>
+      </div>
+    </section>
   </body>
 </html>
